# file_database_project

./: .gitignore  README.md  grammar.md  parser.out.html  parser.out.md  pyproject.toml  scratch.ipynb  scratch2.ipynb
.virtual_documents/: Untitled.ipynb  scratch.ipynb
docs/: conf.py  index.rst
file_database/: __init__.py  cli.py  disk_info.py  fast_manager.py  hasher.py  manager.py  parser.py  querier.py  querier_old.py
spa/: app.py
spa/static/: index.html
