[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-database"
dynamic = ["version"]
description = "Fast index and query of local files."
authors = [{name = "Stephen J Mildenhall", email = "mynl@me.com"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "click",
    "pyyaml",
    "wmi"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities"
]

[tool.setuptools.packages.find]
include = ["file_database"]
exclude = ["docs", "tests", "img"]

[tool.setuptools.dynamic]
version = { attr = "file_database.__version__.__version__" }

[project.scripts]
file-db = "file_database.cli:main"

[project.urls]
"Source Code" = "https://github.com/mynl/file_database_project"

[project.optional-dependencies]
dev = [
    "docutils<0.17",
    "jupyter-sphinx",
    "nbsphinx",
    "pickleshare",
    "recommonmark>=0.7.1",
    "setuptools>=62.3.2",
    "sphinx>=5.0",
    "sphinx-panels",
    "sphinx-rtd-dark-mode",
    "sphinxcontrib-bibtex",
    "sphinx-copybutton",
    "sphinx-toggleprompt",
    "sphinx-multitoc-numbering"
]
